adiciona secao sobremesas

--- a/index.html
+++ b/index.html
@@ -368,6 +368,99 @@
             </div>
         </div>
 
+        <!-- menu sobremesas-->
+        <div class="cabecalho" id="link4">
+            <!-- titulo -->
+            <div class="conteudo-principal">
+                <div class="div-logo">
+                    <img class="img-logo" src="assets/imagens/logo.png">
+                    <h2>Sobremesas </h2>
+                </div>
+                <!-- cardapio secao1-->
+                <div class="secao-popular">
+                    <div class="div-popular">
+                        <div class="fundo-escuro"><span class="linha-vertical"></span>
+                            <!-- popular1 -->
+                            <div class="img-popular">
+                                <img src="assets/imagens/sobremesa1.jpg" alt="imagem pizza napolitana no forno"
+                                    class="img-fundo">
+                            </div>
+                            <div class="popular">
+                                <h3>Sorvete de Baunilha com Caramelo</h3>
+                                <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho especial,
+                                    criado na nossa cozinha para acentuar os sabores naturais dos ingredientes. Este
+                                    molho é uma combinação equilibrada de azeite de oliva extra virgem, suco de limão
+                                    fresco, alho picado e uma pitada de sal marinho.</p>
+                                <h4>$ 22,00</h4>
+                            </div>
+                        </div>
+
+
+                        <!-- popular2 -->
+                        <div class="div-popular">
+                            <div class="fundo-escuro"><span class="linha-vertical"></span>
+                                <!-- popular1 -->
+                                <div class="img-popular">
+                                    <img src="assets/imagens/sobremesa2.jpg" alt="imagem pizza napolitana no forno"
+                                        class="img-fundo">
+                                </div>
+                                <div class="popular">
+                                    <h3>Sorvete Framboesa</h3>
+                                    <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho
+                                        especial, criado na nossa cozinha para acentuar os sabores naturais dos
+                                        ingredientes. Este molho é uma combinação equilibrada de azeite de oliva extra
+                                        virgem, suco de limão fresco, alho picado e uma pitada de sal marinho.</p>
+                                    <h4>$ 14,00</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- cardapio secao2-->
+                <div class="secao-popular">
+                    <div class="div-popular">
+                        <div class="fundo-escuro"><span class="linha-vertical"></span>
+                            <!-- popular1 -->
+                            <div class="img-popular">
+                                <img src="assets/imagens/sobremesa3.jpg" alt="imagem pizza napolitana no forno"
+                                    class="img-fundo">
+                            </div>
+                            <div class="popular">
+                                <h3>Cookie</h3>
+                                <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho especial,
+                                    criado na nossa cozinha para acentuar os sabores naturais dos ingredientes. Este
+                                    molho é uma combinação equilibrada de azeite de oliva extra virgem, suco de limão
+                                    fresco, alho picado e uma pitada de sal marinho.</p>
+                                <h4>$ 8,00</h4>
+                            </div>
+                        </div>
+
+
+                        <!-- popular2 -->
+                        <div class="div-popular">
+                            <div class="fundo-escuro"><span class="linha-vertical"></span>
+                                <!-- popular1 -->
+                                <div class="img-popular">
+                                    <img src="assets/imagens/popular4.jpg" alt="imagem pizza napolitana no forno"
+                                        class="img-fundo">
+                                </div>
+                                <div class="popular">
+                                    <h3>Tiramisu</h3>
+                                    <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho
+                                        especial, criado na nossa cozinha para acentuar os sabores naturais dos
+                                        ingredientes. Este molho é uma combinação equilibrada de azeite de oliva extra
+                                        virgem, suco de limão fresco, alho picado e uma pitada de sal marinho.</p>
+                                    <h4>$ 28,00</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
     <footer>
 
