adiciona secao nosso espaco

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                         <li class="link" id="link2"><a href="#link2">Entradas</a></li>
                         <li class="link" id="link3"><a href="#">Pizzas</a></li>
                         <li class="link" id="link4"><a href="#">Sobremesas</a></li>
-                        <li class="link" id="link5"><a href="#">Nosso espaço</a></li>
-                        <li class="link" id="link6"><a href="#">Contato</a></li>
+                        li class="link" id="link4"><a href="#">Bebidas</a></li>
+                        <li class="link" id="link6"><a href="#">Nosso espaço</a></li>
+                        <li class="link" id="link7"><a href="#">Contato</a></li>
                     </ul>
                 </div>
                 <div class="div-btn">
@@ -275,7 +276,7 @@
             </div>
         </div>
 
-                <!-- menu pizzas-->
+        <!-- menu pizzas-->
         <div class="conteudo" id="link3">
             <!-- titulo -->
             <div class="conteudo-principal">
@@ -460,6 +461,141 @@
                 </div>
             </div>
         </div>
+
+        <!-- menu bebidas-->
+        <div class="conteudo" id="link3">
+            <!-- titulo -->
+            <div class="conteudo-principal">
+                <div class="div-logo">
+                    <img class="img-logo" src="assets/imagens/logo.png">
+                    <h2>Bebidas </h2>
+                </div>
+                <!-- cardapio secao1-->
+                <div class="secao-popular">
+                    <div class="div-popular">
+                        <div class="itens-populares"><span class="linha-vertical"></span>
+                            <!-- popular1 -->
+                            <div class="img-popular">
+                                <img src="assets/imagens/pizza1.jpg" alt="imagem pizza napolitana no forno"
+                                    class="img-fundo">
+                            </div>
+                            <div class="popular">
+                                <h3>Pizza Pepperoni</h3>
+                                <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho especial,
+                                    criado na nossa cozinha para acentuar os sabores naturais dos ingredientes. Este
+                                    molho é uma combinação equilibrada de azeite de oliva extra virgem, suco de limão
+                                    fresco, alho picado e uma pitada de sal marinho.</p>
+                                <h4>$ 42,00</h4>
+                            </div>
+                        </div>
+
+
+                        <!-- popular2 -->
+                        <div class="div-popular">
+                            <div class="itens-populares"><span class="linha-vertical"></span>
+                                <!-- popular1 -->
+                                <div class="img-popular">
+                                    <img src="assets/imagens/popular2.jpg" alt="imagem pizza napolitana no forno"
+                                        class="img-fundo">
+                                </div>
+                                <div class="popular">
+                                    <h3>Pizza de Rúcula</h3>
+                                    <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho
+                                        especial, criado na nossa cozinha para acentuar os sabores naturais dos
+                                        ingredientes. Este molho é uma combinação equilibrada de azeite de oliva extra
+                                        virgem, suco de limão fresco, alho picado e uma pitada de sal marinho.</p>
+                                    <h4>$ 47,00</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- cardapio secao2-->
+                <div class="secao-popular">
+                    <div class="div-popular">
+                        <div class="itens-populares"><span class="linha-vertical"></span>
+                            <!-- popular1 -->
+                            <div class="img-popular">
+                                <img src="assets/imagens/pizza3.jpg" alt="imagem pizza napolitana no forno"
+                                    class="img-fundo">
+                            </div>
+                            <div class="popular">
+                                <h3>Pizza Margheritta</h3>
+                                <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho especial,
+                                    criado na nossa cozinha para acentuar os sabores naturais dos ingredientes. Este
+                                    molho é uma combinação equilibrada de azeite de oliva extra virgem, suco de limão
+                                    fresco, alho picado e uma pitada de sal marinho.</p>
+                                <h4>$ 38,00</h4>
+                            </div>
+                        </div>
+
+
+                        <!-- popular2 -->
+                        <div class="div-popular">
+                            <div class="itens-populares"><span class="linha-vertical"></span>
+                                <!-- popular1 -->
+                                <div class="img-popular">
+                                    <img src="assets/imagens/pizza2.jpg" alt="imagem pizza napolitana no forno"
+                                        class="img-fundo">
+                                </div>
+                                <div class="popular">
+                                    <h3>Pizza Dois Sabores</h3>
+                                    <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho
+                                        especial, criado na nossa cozinha para acentuar os sabores naturais dos
+                                        ingredientes. Este molho é uma combinação equilibrada de azeite de oliva extra
+                                        virgem, suco de limão fresco, alho picado e uma pitada de sal marinho.</p>
+                                    <h4>$ 34,00</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- menu nosso espaco -->
+        <div class="cabecalho" id="link6">
+            <div class="conteudo-cabecalho">
+                <h2>Conheça Nosso Espaço!</h2>
+                <div class="conteudo-texto">
+                    <span class="linha-vertical"></span>
+                    <p>Se preferir uma experiência mais aconchegante, convidamos você a visitar nossa pizzaria e
+                        desfrutar de uma refeição italiana autêntica em um ambiente acolhedor e amigável. Estamos
+                        disponíveis para eventos especiais e oferecemos serviços de catering para tornar seu evento
+                        ainda mais memorável. De festas de aniversário a reuniões de negócios, nossa equipe fará com que
+                        a comida seja uma parte inesquecível da ocasião.</p>
+                </div>
+                <div class="conteudo-interno"><span class="linha-vertical"></span>
+                    <div>
+                        <h3>Entre em contato</h3>
+                        <p> Estamos aqui para servir você e fazer sua experiência gastronômica única e saborosa. Entre
+                            em contato conosco para fazer seu pedido, fazer uma reserva ou discutir suas necessidades de
+                            catering.
+
+                            Na Pizzaria Bella Toscana, acreditamos que cada refeição deve ser uma celebração, e estamos
+                            ansiosos para celebrar com você. Venha nos visitar e descubra por que somos a escolha número
+                            um para pizza italiana autêntica em Porto Alegre.</p>
+                        <h5>Endereço:</h5>
+                        <p>Rua Riachuelo 1330 - Centro - Porto Alegre/RS</p>
+                        <h5>Telefone:</h5>
+                        <p>(51) 99999-9999 ou (51) 3333-8888</p>
+
+                    </div>
+                    <div><img src="assets/imagens/espaco2.jpg" alt="imagem pizza napolitana no forno" class="img-fundo">
+                    </div>
+                </div>
+            </div>
+            <div class="conteudo-externo">
+                <div class="div-img-fundo">
+                    <img src="assets/imagens/espaco1.jpg" alt="imagem pizza napolitana no forno" class="img-fundo">
+                </div>
+
+            </div>
+        </div>
+
+
 
     </main>
     <footer>
