adiciona secao bebidas

--- a/index.html
+++ b/index.html
@@ -476,16 +476,16 @@
                         <div class="itens-populares"><span class="linha-vertical"></span>
                             <!-- popular1 -->
                             <div class="img-popular">
-                                <img src="assets/imagens/pizza1.jpg" alt="imagem pizza napolitana no forno"
+                                <img src="assets/imagens/bebida1.jpg" alt="imagem pizza napolitana no forno"
                                     class="img-fundo">
                             </div>
                             <div class="popular">
-                                <h3>Pizza Pepperoni</h3>
+                                <h3>Água SanPellegrino Saborizada</h3>
                                 <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho especial,
                                     criado na nossa cozinha para acentuar os sabores naturais dos ingredientes. Este
                                     molho é uma combinação equilibrada de azeite de oliva extra virgem, suco de limão
                                     fresco, alho picado e uma pitada de sal marinho.</p>
-                                <h4>$ 42,00</h4>
+                                <h4>$ 7,00</h4>
                             </div>
                         </div>
 
@@ -495,16 +495,16 @@
                             <div class="itens-populares"><span class="linha-vertical"></span>
                                 <!-- popular1 -->
                                 <div class="img-popular">
-                                    <img src="assets/imagens/popular2.jpg" alt="imagem pizza napolitana no forno"
+                                    <img src="assets/imagens/bebida2.jpg" alt="imagem pizza napolitana no forno"
                                         class="img-fundo">
                                 </div>
                                 <div class="popular">
-                                    <h3>Pizza de Rúcula</h3>
+                                    <h3>Suco de Laranja</h3>
                                     <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho
                                         especial, criado na nossa cozinha para acentuar os sabores naturais dos
                                         ingredientes. Este molho é uma combinação equilibrada de azeite de oliva extra
                                         virgem, suco de limão fresco, alho picado e uma pitada de sal marinho.</p>
-                                    <h4>$ 47,00</h4>
+                                    <h4>$ 8,00</h4>
                                 </div>
                             </div>
                         </div>
@@ -518,16 +518,16 @@
                         <div class="itens-populares"><span class="linha-vertical"></span>
                             <!-- popular1 -->
                             <div class="img-popular">
-                                <img src="assets/imagens/pizza3.jpg" alt="imagem pizza napolitana no forno"
+                                <img src="assets/imagens/bebida3.jpg" alt="imagem pizza napolitana no forno"
                                     class="img-fundo">
                             </div>
                             <div class="popular">
-                                <h3>Pizza Margheritta</h3>
+                                <h3>Chopp</h3>
                                 <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho especial,
                                     criado na nossa cozinha para acentuar os sabores naturais dos ingredientes. Este
                                     molho é uma combinação equilibrada de azeite de oliva extra virgem, suco de limão
                                     fresco, alho picado e uma pitada de sal marinho.</p>
-                                <h4>$ 38,00</h4>
+                                <h4>$ 14,00</h4>
                             </div>
                         </div>
 
@@ -537,16 +537,16 @@
                             <div class="itens-populares"><span class="linha-vertical"></span>
                                 <!-- popular1 -->
                                 <div class="img-popular">
-                                    <img src="assets/imagens/pizza2.jpg" alt="imagem pizza napolitana no forno"
+                                    <img src="assets/imagens/bebida4.jpg" alt="imagem pizza napolitana no forno"
                                         class="img-fundo">
                                 </div>
                                 <div class="popular">
-                                    <h3>Pizza Dois Sabores</h3>
+                                    <h3>Vinho Taça</h3>
                                     <p> Nossa Salada de Abacate com Quinoa é cuidadosamente regada com um molho
                                         especial, criado na nossa cozinha para acentuar os sabores naturais dos
                                         ingredientes. Este molho é uma combinação equilibrada de azeite de oliva extra
                                         virgem, suco de limão fresco, alho picado e uma pitada de sal marinho.</p>
-                                    <h4>$ 34,00</h4>
+                                    <h4>$ 14,00</h4>
                                 </div>
                             </div>
                         </div>
