ajusta link nav bar

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <li class="link" id="link2"><a href="#link2">Entradas</a></li>
                         <li class="link" id="link3"><a href="#">Pizzas</a></li>
                         <li class="link" id="link4"><a href="#">Sobremesas</a></li>
-                        li class="link" id="link4"><a href="#">Bebidas</a></li>
+                        <li class="link" id="link4"><a href="#">Bebidas</a></li>
                         <li class="link" id="link6"><a href="#">Nosso espaço</a></li>
                         <li class="link" id="link7"><a href="#">Contato</a></li>
                     </ul>
