--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                             em contato conosco para fazer seu pedido, fazer uma reserva ou discutir suas necessidades de
                             catering.
 
-                            Na Pizzaria Bella Toscana, acreditamos que cada refeição deve ser uma celebração, e estamos
+                            Na Fauno Pizzeria, acreditamos que cada refeição deve ser uma celebração, e estamos
                             ansiosos para celebrar com você. Venha nos visitar e descubra por que somos a escolha número
                             um para pizza italiana autêntica em Porto Alegre.</p>
                         <h5>Endereço:</h5>
