--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 </div>
                 <div class="div-links">
                     <ul class="ul-links">
-                        <li class="link" id="link1"><a href="#link1">Menu</a></li>
-                        <li class="link" id="link2"><a href="#link2">Entradas</a></li>
-                        <li class="link" id="link3"><a href="#">Pizzas</a></li>
-                        <li class="link" id="link4"><a href="#">Sobremesas</a></li>
-                        <li class="link" id="link4"><a href="#">Bebidas</a></li>
-                        <li class="link" id="link6"><a href="#">Nosso espaço</a></li>
-                        <li class="link" id="link7"><a href="#">Contato</a></li>
+                        <li class="link"><a href="#menu">Menu</a></li>
+                        <li class="link"><a href="#entradas">Entradas</a></li>
+                        <li class="link"><a href="#pizzas">Pizzas</a></li>
+                        <li class="link"><a href="#sobremesas">Sobremesas</a></li>
+                        <li class="link"><a href="#bebidas">Bebidas</a></li>
+                        <li class="link"><a href="#nosso-espaco">Nosso espaço</a></li>
+                        <li class="link"><a href="#">Contato</a></li>
                     </ul>
                 </div>
                 <div class="div-btn">
@@ -88,7 +88,7 @@
     <!-- principal -->
     <main>
         <!-- menu itens populares-->
-        <div class="conteudo" id="link1">
+        <div class="conteudo" id="menu">
             <!-- titulo -->
             <div class="conteudo-principal">
                 <div class="div-logo">
@@ -181,7 +181,7 @@
         </div>
 
         <!-- menu entradas-->
-        <div class="cabecalho" id="link2">
+        <div class="cabecalho" id="entradas">
             <!-- titulo -->
             <div class="conteudo-principal">
                 <div class="div-logo">
@@ -274,7 +274,7 @@
         </div>
 
         <!-- menu pizzas-->
-        <div class="conteudo" id="link3">
+        <div class="conteudo" id="pizzas">
             <!-- titulo -->
             <div class="conteudo-principal">
                 <div class="div-logo">
@@ -367,7 +367,7 @@
         </div>
 
         <!-- menu sobremesas-->
-        <div class="cabecalho" id="link4">
+        <div class="cabecalho" id="sobremesas">
             <!-- titulo -->
             <div class="conteudo-principal">
                 <div class="div-logo">
@@ -460,7 +460,7 @@
         </div>
 
         <!-- menu bebidas-->
-        <div class="conteudo" id="link3">
+        <div class="conteudo" id="bebidas">
             <!-- titulo -->
             <div class="conteudo-principal">
                 <div class="div-logo">
@@ -553,7 +553,7 @@
         </div>
 
         <!-- menu nosso espaco -->
-        <div class="cabecalho" id="link6">
+        <div class="cabecalho" id="nosso-espaco">
             <div class="conteudo-cabecalho">
                 <h2>Conheça Nosso Espaço!</h2>
                 <div class="conteudo-texto">
