ajusta peso das imagens

--- a/index.html
+++ b/index.html
@@ -580,7 +580,8 @@
                         <p>(51) 99999-9999 ou (51) 3333-8888</p>
 
                     </div>
-                    <div><img src="assets/imagens/espaco2.jpg" alt="imagem pizza napolitana no forno" class="img-fundo">
+                    <div class="div-img-espaco">
+                        <img src="assets/imagens/espaco2.jpg" alt="imagem pizza napolitana no forno" class="img-fundo">
                     </div>
                 </div>
             </div>
