adiciona media versao tablet

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                     <a href="#" class="btn">Faça seu pedido</a>
                 </div>
             </nav>
-
         </div>
         <!-- conteudo cabecalho -->
         <div class="cabecalho">
@@ -58,7 +57,7 @@
                         italiana diretamente para a sua mesa.</p>
                 </div>
                 <div class="conteudo-interno">
-                    <div>
+                    <div class="div-conteudo-interno">
                         <h3>Descubra o Sabor da Itália em Cada Mordida! </h3>
                         <p> Além das pizzas, nossa pizzaria oferece uma seleção de massas frescas, sanduiches, saladas
                             crocantes e
@@ -565,7 +564,7 @@
                         a comida seja uma parte inesquecível da ocasião.</p>
                 </div>
                 <div class="conteudo-interno"><span class="linha-vertical"></span>
-                    <div>
+                    <div class="contato-entre">
                         <h3>Entre em contato</h3>
                         <p> Estamos aqui para servir você e fazer sua experiência gastronômica única e saborosa. Entre
                             em contato conosco para fazer seu pedido, fazer uma reserva ou discutir suas necessidades de
@@ -597,7 +596,20 @@
 
     </main>
     <footer>
-
+        <div class="rodape">
+                <div class="div-logo">
+                    <img class="img-logo" src="assets/imagens/logo.png">
+                    <h2>Fauno Pizzeria</h2>
+                </div>
+                <div class="copyright">
+                    <p class="copyright-texto">&copy; 2023 Vitória Fortes. Todos os dereitos reservados.</p>
+                </div>
+                <div class="div-icones">
+                    <a href="#"><img class="icone" src="assets/imagens/git.svg"></a>
+                    <a href="#"><img class="icone" src="assets/imagens/insta.svg"></a>
+                    <a href="#"><img class="icone" src="assets/imagens/linkedin.svg"></a>
+                </div>
+        </div>
     </footer>
 
 </body>
