--- a/menu.html
+++ b/menu.html
@@ -75,7 +75,7 @@
                                         molho é uma combinação equilibrada de azeite de oliva extra virgem, suco de
                                         limão
                                         fresco, alho picado e uma pitada de sal marinho.</p>
-                                    <h4>$ 19,00</h4> <button type="button" href="#" class="btn" id="adicionar">Adicionar à sacola</button>
+                                    <h4>$ 19,00</h4> <button type="button" href="#" class="btn" id="item01">Adicionar à sacola</button>
                                 </div>
                             </div>
 
@@ -95,7 +95,7 @@
                                             ingredientes. Este molho é uma combinação equilibrada de azeite de oliva
                                             extra
                                             virgem, suco de limão fresco, alho picado e uma pitada de sal marinho.</p>
-                                        <h4>$ 47,00</h4><button type="button" href="#" class="btn" id="adicionar">Adicionar à sacola</button>
+                                        <h4>$ 47,00</h4><button type="button" href="#" class="btn" id="item02">Adicionar à sacola</button>
                                     </div>
                                 </div>
                             </div>
@@ -546,7 +546,19 @@
             </div>
             
         </div>
-        <span id="valorTotal"></span>
+        <div>
+            <p></p><span id="valor">R$ 00</span>
+            <table id="tabela">
+                <thead>
+                    <tr>
+                        <th>Índice</th>
+                        <th>Valor</th>
+                    </tr>
+                </thead>
+                <tbody id="tabela-corpo">
+                </tbody>
+            </table>
+        </div>
         <div class="finaliza-compra">
             <button type="button" href="#" class="btn" id="finalizar">Finalizar compra</button>
         </div>
