--- a/menu.html
+++ b/menu.html
@@ -75,7 +75,7 @@
                                         molho é uma combinação equilibrada de azeite de oliva extra virgem, suco de
                                         limão
                                         fresco, alho picado e uma pitada de sal marinho.</p>
-                                    <h4>$ 19,00</h4> <button type="button" href="#" class="btn" id="item01">Adicionar à sacola</button>
+                                    <h4 id="valor01">$ 19,00</h4> <button type="button" href="#" class="btn" id="item01">Adicionar à sacola</button>
                                 </div>
                             </div>
 
@@ -548,16 +548,16 @@
         </div>
         <div>
             <p></p><span id="valor">R$ 00</span>
-            <table id="tabela">
-                <thead>
-                    <tr>
-                        <th>Índice</th>
-                        <th>Valor</th>
-                    </tr>
-                </thead>
-                <tbody id="tabela-corpo">
-                </tbody>
-            </table>
+                <table id="tabela">
+        <thead>
+            <tr>
+                <th>Item</th>
+                <th>Valor</th>
+            </tr>
+        </thead>
+        <tbody id="tabela-corpo">
+        </tbody>
+    </table>
         </div>
         <div class="finaliza-compra">
             <button type="button" href="#" class="btn" id="finalizar">Finalizar compra</button>
