--- a/menu.html
+++ b/menu.html
@@ -31,10 +31,7 @@
                 <div class="div-links">
                     <ul class="ul-links">
                         <li class="link"><a href="#menu">Menu</a></li>
-                        <li class="link"><a href="#entradas">Entradas</a></li>
-                        <li class="link"><a href="#pizzas">Pizzas</a></li>
-                        <li class="link"><a href="#sobremesas">Sobremesas</a></li>
-                        <li class="link"><a href="#bebidas">Bebidas</a></li>
+
                         <li class="link"><a href="#nosso-espaco">Nosso espaço</a></li>
                         <li class="link"><a href="#">Contato</a></li>
                     </ul>
@@ -564,7 +561,22 @@
         </div>
     </main>
     <footer>
-
+        <footer>
+            <div class="rodape">
+                    <div class="div-logo">
+                        <img class="img-logo" src="assets/imagens/logo.png">
+                        <h2>Fauno Pizzeria</h2>
+                    </div>
+                    <div class="copyright">
+                        <p class="copyright-texto">&copy; 2023 Vitória Fortes. Todos os dereitos reservados.</p>
+                    </div>
+                    <div class="div-icones">
+                        <a href="#"><img class="icone" src="assets/imagens/git.svg"></a>
+                        <a href="#"><img class="icone" src="assets/imagens/insta.svg"></a>
+                        <a href="#"><img class="icone" src="assets/imagens/linkedin.svg"></a>
+                    </div>
+            </div>
+        </footer>
     </footer>
 <script src="logica.js"></script>
 </body>
