finaliza logica menu

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav class="nav">
                 <div class="div-logo">
                     <img class="img-logo" src="assets/imagens/logo.png">
-                    <h1>Fauno Pizzeria</h1>
+                    <h1><a href="index.html">Fauno Pizzeria</a></h1>
                 </div>
                 <div class="div-links">
                     <ul class="ul-links">
@@ -36,7 +36,7 @@
                     </ul>
                 </div>
                 <div class="div-btn">
-                    <a href="#" class="btn">Faça seu pedido</a>
+                    <a href="menu.html" class="btn">Faça seu pedido</a>
                 </div>
             </nav>
         </div>
@@ -84,7 +84,7 @@
     <main>
        
         <!-- menu nosso espaco -->
-        <div class="cabecalho" id="nosso-espaco">
+        <div class="cabecalho conteudo" id="nosso-espaco">
             <div class="conteudo-cabecalho">
                 <h2>Conheça Nosso Espaço!</h2>
                 <div class="conteudo-texto">
